# OpenCV-Object-Recognition

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
OpenCV-Object-Recognition/: CMakeLists.txt  OpenCV-Object-Recognition.h
OpenCV-Object-Recognition/External Code/: freenect-playback-wrapper.cpp  freenect-playback-wrapper.h
OpenCV-Object-Recognition/Header Files/: Classifiers.h  ConfusionMatrix.h  FileHandler.h  OpenCV-Object-Recognition.h  Preprocessor.h  Structures.h
OpenCV-Object-Recognition/Source Files/: Classifiers.cpp  ConfusionMatrix.cpp  FileHandler.cpp  OpenCV-Object-Recognition.cpp  Preprocessor.cpp
OpenCV-Object-Recognition/Testing Code/: Tests.cpp  Tests.h
